2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/gradmap.c: added procedure plug_in_palettemap
	that does the same thing as gradmap except using the current
	palette; should resolve bug #68879.
	
2005-01-02  Manish Singh  <yosh@gimp.org>

	* plug-ins/common/tiff.c: Special case 1-bit black & white indexed
	images to save out as 1-bit grayscale MINISWHITE tiffs. Also load
	these images as indexed images into GIMP. Fixes bug #150865.

2005-01-01  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/display/gimpdisplayshell-callbacks.c: use a timeout for
	autoscrolling, to fix bug #8269.  Happy new year!

2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/paint/gimpbrushcore.c
	* app/paint/gimppaintoptions.c
	* app/paint/gimppaintoptions.h
	* app/tools/gimppaintoptions-gui.c: reverted last change, and
	applied full patch from Dave Ahlswede in bug #149576.

2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* tools/pdbgen/pdb/gradient.pdb: added gradient-is-editable

	* tools/pdbgen/pdb/brush.pdb
	* tools/pdbgen/pdb/palette.pdb: changed mitch_misc to bill_misc
	where correct.

	* app/pdb/brush_cmds.c
	* app/pdb/palette_cmds.c
	* libgimp/gimpbrush_pdb.c
	* libgimp/gimppalette_pdb.c: regenerated.

2004-12-31  Bill Skaggs <weskaggs@primate.ucdavis.edu>

	* app/paint/gimpbrushcore.c: make previously committed change
	in pressure-size relationship apply only to airbrush, as
	intended.
	
2004-12-31  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-actions.c: use the orininal string if
	plug_in_actions_check_translation() fails instead of bailing out.
	Fixes bug #162590.

2004-12-31  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppalette.[ch]: removed the just added
	gimp_palette_insert_entry() and added a "gint position" parameter
	to gimp_palette_add_entry() instead (no need to have two almost
	identical functions).

	* app/actions/palette-editor-commands.c
	* app/core/gimppalette-import.c